Fix whitespace in CSS file.

--- a/assets/css/listings.css
+++ b/assets/css/listings.css
@@ -1,16 +1,16 @@
 
 		.sidebar {
-		  position:absolute;
-		  width:33.3333%;
-		  top:0;
-		  left:0;
-		  overflow:hidden;
-		  border-right:1px solid rgba(0,0,0,0.25);
-		  top: 5.125rem;
+			position:absolute;
+			width:33.3333%;
+			top:0;
+			left:0;
+			overflow:hidden;
+			border-right:1px solid rgba(0,0,0,0.25);
+			top: 5.125rem;
 			height: calc(100vh - 5.125rem); /* header height */
 		}
 		.pad2 {
-		  padding:20px;
+			padding:20px;
 		}
 		.sidebar h1 {
 			margin: 0;
@@ -18,41 +18,41 @@
 		}
 
 		.map {
-		  position:absolute;
-		  left:33.3333%;
-		  width:66.6666%;
-		  bottom:0;
-		  top: 5.125rem;
-		height: 500px;
-		height: 100vh;
-		height: calc(100vh - 5.125rem); /* header height */
+			position:absolute;
+			left:33.3333%;
+			width:66.6666%;
+			bottom:0;
+			top: 5.125rem;
+			height: 500px;
+			height: 100vh;
+			height: calc(100vh - 5.125rem); /* header height */
 		}
 
 		.heading {
-		  background:#fff;
-		  border-bottom:1px solid #eee;
-		  height:60px;
-		  line-height:60px;
-		  padding:0 10px;
+			background:#fff;
+			border-bottom:1px solid #eee;
+			height:60px;
+			line-height:60px;
+			padding:0 10px;
 		}
 
 		.listings {
-		  height:100%;
-		  overflow:auto;
-		  padding-bottom:60px;
+			height:100%;
+			overflow:auto;
+			padding-bottom:60px;
 		}
 
 		.listings .item {
-		  display:block;
-		  border-bottom:1px solid #eee;
-		  padding:10px;
-		  text-decoration:none;
+			display:block;
+			border-bottom:1px solid #eee;
+			padding:10px;
+			text-decoration:none;
 		}
 
 		.listings .item:last-child { border-bottom:none; }
 		.listings .item .title {
-		  display:block;
-		  font-weight:700;
+			display:block;
+			font-weight:700;
 		}
 
 
@@ -60,133 +60,133 @@
 		.listings .item.active .title,
 		.listings .item .title:hover { color: rgb(144, 194, 70); /* @lime */ }
 		.listings .item.active {
-		  background-color:#f8f8f8;
+			background-color:#f8f8f8;
 		}
 
 		.clearfix { display:block; }
 		.clearfix:after {
-		  content:'.';
-		  display:block;
-		  height:0;
-		  clear:both;
-		  visibility:hidden;
+			content:'.';
+			display:block;
+			height:0;
+			clear:both;
+			visibility:hidden;
 		}
 
 		/* Marker tweaks */
 		.mapboxgl-popup {
-		  padding-bottom: 50px;
+			padding-bottom: 50px;
 		}
 
 		.mapboxgl-popup-close-button {
-		  display:none;
+			display:none;
 		}
 
 		.mapboxgl-popup-content {
-		  font:400 15px/22px 'Source Sans Pro', 'Helvetica Neue', Sans-serif;
-		  padding:0;
-		  width:400px;
+			font:400 15px/22px 'Source Sans Pro', 'Helvetica Neue', Sans-serif;
+			padding:0;
+			max-width: 80vw;
 		}
 
 		.mapboxgl-popup-content-wrapper {
-		  padding:1%;
+			padding:1%;
 		}
 
 		.mapboxgl-popup-content h3 {
-		  background:#91c949;
-		  color:#fff;
-		  margin:0;
-		  display:block;
-		  padding:10px;
-		  border-radius:3px 3px 0 0;
-		  font-weight:700;
-		  margin-top:-15px;
+			background:#91c949;
+			color:#fff;
+			margin:0;
+			display:block;
+			padding:10px;
+			border-radius:3px 3px 0 0;
+			font-weight:700;
+			margin-top:-15px;
 		}
 
 		.mapboxgl-popup-content h4 {
-		  margin:0;
-		  display:block;
-		  padding: 10px 10px 10px 10px;
-		  font-weight:400;
-		  margin: 0;
+			margin:0;
+			display:block;
+			padding: 10px 10px 10px 10px;
+			font-weight:400;
+			margin: 0;
 		}
 
 		/*.mapboxgl-popup-farmers-market h3 {
 			background:#91c949;
-		  color:#fff;
-		  margin:0;
-		  display:block;
-		  padding:10px;
-		  border-radius:3px 3px 0 0;
-		  font-weight:700;
-		  margin-top:-15px;
+			color:#fff;
+			margin:0;
+			display:block;
+			padding:10px;
+			border-radius:3px 3px 0 0;
+			font-weight:700;
+			margin-top:-15px;
 		}
 
 		.mapboxgl-popup-community-garden h3 {
 			background:#F9C058;
-		  color:#fff;
-		  margin:0;
-		  display:block;
-		  padding:10px;
-		  border-radius:3px 3px 0 0;
-		  font-weight:700;
-		  margin-top:-15px;
+			color:#fff;
+			margin:0;
+			display:block;
+			padding:10px;
+			border-radius:3px 3px 0 0;
+			font-weight:700;
+			margin-top:-15px;
 		}
 
 		.mapboxgl-popup-food-bank h3 {
 			background:#F37568;
-		  color:#fff;
-		  margin:0;
-		  display:block;
-		  padding:10px;
-		  border-radius:3px 3px 0 0;
-		  font-weight:700;
-		  margin-top:-15px;
+			color:#fff;
+			margin:0;
+			display:block;
+			padding:10px;
+			border-radius:3px 3px 0 0;
+			font-weight:700;
+			margin-top:-15px;
 		}*/
 
 		.mapboxgl-popup-content div {
-		  padding:10px;
+			padding:10px;
 		}
 
 		.mapboxgl-container .leaflet-marker-icon { 
-		  cursor:pointer; 
+			cursor:pointer; 
 		}
 
 		.mapboxgl-popup-anchor-top > .mapboxgl-popup-content {
-		  margin-top: 15px;
+			margin-top: 15px;
 		}
 
 		.mapboxgl-popup-anchor-top > .mapboxgl-popup-tip {
-		  border-bottom-color: #91c949;
+			border-bottom-color: #91c949;
 		}
 
 		.farmers-market-marker {
-		  border: none;
-		  cursor: pointer;
-		  height: 56px;
-		  width: 43px;
-		  background-image: url(/assets/images/map/farmers-market.svg);
-		  background-color: rgba(0, 0, 0, 0);
-		  transform: translate(28px, 56px, 0);
+			border: none;
+			cursor: pointer;
+			height: 56px;
+			width: 43px;
+			background-image: url(/assets/images/map/farmers-market.svg);
+			background-color: rgba(0, 0, 0, 0);
+			transform: translate(28px, 56px, 0);
 		}
 
 		.community-garden-marker {
 		border: none;
-		  cursor: pointer;
-		  height: 56px;
-		  width: 43px;
-		  background-image: url(/assets/images/map/community-garden.svg);
-		  background-color: rgba(0, 0, 0, 0);
-		  transform: translate(28px, 56px, 0);
+			cursor: pointer;
+			height: 56px;
+			width: 43px;
+			background-image: url(/assets/images/map/community-garden.svg);
+			background-color: rgba(0, 0, 0, 0);
+			transform: translate(28px, 56px, 0);
 		}
 
 		.food-bank-marker {
 			border: none;
-		  cursor: pointer;
-		  height: 56px;
-		  width: 43px;
-		  background-image: url(/assets/images/map/food-bank.svg);
-		  background-color: rgba(0, 0, 0, 0);
-		  transform: translate(28px, 56px, 0);
+			cursor: pointer;
+			height: 56px;
+			width: 43px;
+			background-image: url(/assets/images/map/food-bank.svg);
+			background-color: rgba(0, 0, 0, 0);
+			transform: translate(28px, 56px, 0);
 		}
 
 		#farmersMarket {
